--- a/Sell/Sell.vcxproj
+++ b/Sell/Sell.vcxproj
@@ -145,7 +145,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Entity.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="RenderWindow.cpp" />
+    <ClCompile Include="Sell.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Entity.hpp" />
+    <ClInclude Include="Math.hpp" />
+    <ClInclude Include="RenderWindow.hpp" />
+    <ClInclude Include="Sell.hpp" />
+    <ClInclude Include="Utils.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
