--- a/Sell/Sell.vcxproj
+++ b/Sell/Sell.vcxproj
@@ -146,12 +146,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="RenderWindow.cpp" />
     <ClCompile Include="Sell.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Entity.hpp" />
+    <ClInclude Include="InputManager.hpp" />
     <ClInclude Include="Math.hpp" />
     <ClInclude Include="RenderWindow.hpp" />
     <ClInclude Include="Sell.hpp" />
